# dpOptTrans

./: .gitignore  CMakeLists.txt  Makefile  README.md  historic_cmds.sh  setup.sh  tobuild.txt
goIcp/: config.txt  configScaled.txt
include/dpOptTrans/: dp_vmf_opt_rot.h  pcHelpers.h  pc_helper.h
include/dpvMFoptRot/: dp_vmf_opt_rot.h  pc_helper.h
python/: alignBuddha.py  collectResults.py  computeCDFs.py  computeResults.py  configApartment.txt  configHappyBuddha.txt  convertAslDatasetToPly.py  dispBBiterationStats.py  dispTestBounds.py  evalNoiseOutliers.py  helpers.py  makeVideo.py  makeVideoPointClouds.py  makeVideoR3.py  makeVideoR3PointClouds.py  makeVideoS3.py  makeVideoS3PointClouds.py  plotNoiseOutlierResults.py  plotResults.py  poseScannerLeicaToRelativeGt.py  project4d.py  project4d_600cell.py  randomRenderAndCompare.py  runMatlabFFT.sh  runMultiRndNoiseOutlierBunny.py  runMultiRndRender.py  runMultiRndRender3Dsim.py  runMultiRndRenderNYU.py  testRotationalConvergenceSearchDepth.py  transformAll.py
src/: dp_vmf_opt_rot.cpp  dp_vmf_opt_rot_ply.cpp  icp_T3.cpp  moment_matched_T3.cpp  pcHelpers.cpp  pc_helper.cpp
